--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <p style="font-size: 7mm;">
             Visit NS Wallpapers.
             <br><br>
-            <a href="./NS wallpapers (main).html" target="_blank"><img src="./Styling/Logo/NS Wallpapers.png" height="225px" width="225px"></a>
+            <a href="https://ns-ai.github.io/nswallpapers/" target="_blank"><img src="./Styling/Logo/NS Wallpapers.png" height="225px" width="225px"></a>
             <br><br>
-            <a href="./NS wallpapers (main).html" target="_blank"><b>NS Wallpapers</b></a>
+            <a href="https://ns-ai.github.io/nswallpapers/" target="_blank"><b>NS Wallpapers</b></a>
             <br><br>
             The Best place to get FHD/4K wallpapers for PC online.
             <br><br><br>
