--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <center>
         <body style="font-family: 'PT Sans', sans-serif;">
-        <body background="./Styling/Background/background.png">
+        <body background="./Styling/Background/background(bubbles).png">
 
             <br>
                 ----------------------------------------------------
